deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "frontend"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: mynginx
        image: nginx
        ports:
        - containerPort: 80
