service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: multitool
  ports:
  - name: multitool
    port: 80
    targetPort: 8080
