service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  selector:
    app: nginx
  ports:
  - name: nginx
    port: 80
    targetPort: 80
