service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysvc
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
  - name: nginx
    port: 9001
    targetPort: 80
    nodePort: 31111
